WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170667
REGRESSION(
r214426
): [GTK] Test media/video-click-dblckick-standalone.html started to fail in the bots after
r214426
https://bugs.webkit.org/show_bug.cgi?id=170667
Summary
REGRESSION(r214426): [GTK] Test media/video-click-dblckick-standalone.html st...
Carlos Garcia Campos
Reported
2017-04-10 01:12:03 PDT
I thought it was because of the early return added in MediaDocument::defaultEventHandler(), so I disabled modern media controls runtime feature in GTK+ port. But the test is still failing, so I guess it's the test that is enabling that feature
Attachments
Patch
(3.07 KB, patch)
2017-04-10 03:48 PDT
,
Carlos Garcia Campos
zan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-04-10 01:16:36 PDT
For some reason I can't reproduce it locally, but it's always failing in the bots.
Carlos Garcia Campos
Comment 2
2017-04-10 03:48:57 PDT
Created
attachment 306679
[details]
Patch
Carlos Garcia Campos
Comment 3
2017-04-10 04:44:30 PDT
Committed
r215178
: <
http://trac.webkit.org/changeset/215178
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug