REGRESSION(r214426): [GTK] Test media/video-click-dblckick-standalone.html started to fail in the bots after r214426 https://bugs.webkit.org/show_bug.cgi?id=170667

Reviewed by Žan Doberšek.

Tools:

In r214666 we disabled modern media controls runtime feature for the GTK+ port, but layout tests still override
that value.

* WebKitTestRunner/gtk/TestControllerGtk.cpp:
(WTR::TestController::updatePlatformSpecificTestOptionsForTest): Disable modern media controls.

LayoutTests:

Unskip then test that is passing now.

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/187604@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215178 268f45cc-cd09-0410-ab3c-d52691b4dbfc