Tools/WebKitTestRunner/gtk/TestControllerGtk.cpp
@@ -155,8 +155,9 @@ void TestController::platformResetPreferencesToConsistentValues()
     m_mainWebView->dismissAllPopupMenus();
 }
 
-void TestController::updatePlatformSpecificTestOptionsForTest(TestOptions&, const std::string&) const
+void TestController::updatePlatformSpecificTestOptionsForTest(TestOptions& options, const std::string&) const
 {
+    options.enableModernMediaControls = false;
 }
 
 } // namespace WTR
